# rental-house-fastapi

./: .dockerignore  .env.development.example  .env.production.example  .env.test.example  .env.testing.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  logging.toml  pyproject.toml  requirements.txt  settings.toml  tox.ini
app/: exception_handlers.py  healthcheck.py  lifespan.py  main.py
app/account/auth/: security.py  token.py
app/account/auth/api/dependencies/: services.py
app/account/auth/api/routers/: user.py
app/account/auth/helpers/: enums.py  exceptions.py
app/account/auth/models/: __init__.py  activity_log.py  activity_logs.py  permission.py  profile.py  role.py  role_permission.py  token.py  user.py  user_role.py
app/account/auth/repository/bll/: user.py
app/account/auth/repository/dal/: __init__.py  user.py
app/account/auth/repository/services/: __init__.py  token.py  user.py
app/account/auth/schemas/: __init__.py  token.py  user.py
app/account/otp/api/dependencies/: __init__.py  services.py  totp.py
app/account/otp/api/routers/: otp.py  totp.py
app/account/otp/helpers/: enums.py  exceptions.py
app/account/otp/repository/bll/: __init__.py  totp.py
app/account/otp/repository/dal/: __init__.py  totp.py
app/account/otp/repository/services/: __init__.py  totp.py
app/account/otp/tasks/: email.py
app/account/otp/templates/: otp_email.html
config/: base.py  celery.py  logging.py  redis.py
config/database/: base.py
config/environments/: .env.development.example  .env.production.example
config/logging/: base.py
config/settings/: __init__.py  base.py  enums.py
docs/database/: creat_db.sql  diagram.dbml
docs/security/: create_jwt_keys.md
scripts/: coverage.sh  entrypoint.sh
tests/: conftest.py
tests/app/account/otp/repository/bll/: test_totp.py
tests/integration/: test_exception_handlers.py  test_healthcheck.py
tests/integration/otp/: test_totp_api.py
tests/toolkit/api/: test_api_client.py
tests/unit/app/: test_lifespan.py
tests/unit/app/account/otp/api/: test_dependencies.py
tests/unit/app/account/otp/repository/bll/: test_totp.py
tests/unit/app/account/otp/repository/dal/: test_totp.py
tests/unit/app/account/otp/repository/services/: test_totp.py
tests/unit/app/account/otp/tasks/: test_email.py
tests/unit/toolkit/api/: test_api_client.py  test_exceptions.py  test_pagination.py
tests/unit/toolkit/api/dependencies/: test_database.py  test_redis.py
tests/unit/toolkit/parsers/: test_toml_parser.py
toolkit/api/: __init__.py  api_client.py  response_formatter.py
toolkit/api/database/: session.py
toolkit/api/dependencies/: __init__.py  database.py  redis.py
toolkit/api/enums/: __init__.py  messages.py  status_code_doc.py  tags.py
toolkit/api/exceptions/: __init__.py  abc.py  custom_exceptions.py  http_exceptions.py
toolkit/api/redis/: client.py
toolkit/api/schemas/: __init__.py  base.py  errors.py  mixins.py  pagination.py
toolkit/database/: mixins.py  orm.py
toolkit/parsers/: __init__.py  abc.py  toml_parser.py
toolkit/parsers/helpers/: exceptions.py
