[tool.poetry]
name = "rental-house-fastapi"
version = "0.1.0"
description = "Backend for a rental house application using FastAPI."
authors = ["alihezarpisheh <alihezarpisheh@outlook.com>"]
license = "MIT"
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.4.10"
mypy = "^1.10.0"
isort = "^5.13.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-randomly = "^3.15.0"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"
tomlkit = "^0.12.5"
sqlalchemy = {extras = ["mypy"], version = "^2.0.31"}
fastapi = "^0.111.0"
tox = "^4.15.1"
pydantic-settings = "^2.3.3"
pre-commit = "^3.7.1"
asyncpg = "^0.29.0"
coloredlogs = "^15.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
lint.select = [
    "E",  # pycodestyle
    "W",  # pycodestyle
    "F",  # pyflakes
    "UP",  # pyupgrade
    "C90",  # mccabe
    "D",  # pydocstyle
    "I",  # isort
    "RUF",  # Ruff specific rules
]
lint.ignore = ["D104"]
lint.exclude = ["*/alembic/*"]

lint.fixable = [
    "F401",  # Remove unused imports.
    "RUF100",  # Remove unused noqa comments.
]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"


[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true


[tool.mypy]
strict = true
ignore_missing_imports = true

plugins = "sqlalchemy.ext.mypy.plugin"

exclude = "tests/"


[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "-v",
]
markers = [
    "smoke: Tests focusing on essential and critical functionality",
    "exception: Tests checking how the application handles exceptions and error scenarios",
    "asyncio: Asynchronous tests using the pytest-asyncio plugin",
]
required_plugins = [
    "pytest-randomly",
    "pytest-cov",
]

testpaths = "tests"
xfail_strict = true


[tool.coverage.run]
parallel = true
source = [
    "app",
    "toolkit",
]
